<?php

use App\Models\Profil;
use App\Models\User;
use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     */
    public function up(): void
    {
        Schema::create('commentaires', function (Blueprint $table) {
            $table->id();
            $table->foreignIdFor(User::class, 'admin_id')->constrained('users')->cascadeOnDelete();
            $table->foreignIdFor(Profil::class)->constrained()->cascadeOnDelete();
            $table->text('contenu');
            $table->timestamps();

            // Je rajoute une contrainte ici : Un administrateur ne peut poster qu'un commentaire sur un profil.
            $table->unique(['admin_id', 'profil_id']);
        });
    }

    /**
     * Reverse the migrations.
     */
    public function down(): void
    {
        Schema::dropIfExists('commentaires');
    }
};
